// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBoxWithSuggestions should render a search box, a button and not render a suggestion list 1`] = `
<DocumentFragment>
  <div
    style="position: relative;"
  >
    <form
      class="flex-nowrap form-inline"
    >
      <div
        class="inputGroup input-group"
      >
        <input
          class="border-right-0 rounded-0 form-control"
          placeholder="Enter a location..."
          type="text"
          value=""
        />
        <button
          class="btn btn-success rounded-0"
          type="button"
        >
          Search
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SearchBoxWithSuggestions should render a suggestion list when suggestions are available 1`] = `
<DocumentFragment>
  <div
    style="position: relative;"
  >
    <form
      class="flex-nowrap form-inline"
    >
      <div
        class="inputGroup input-group"
      >
        <input
          class="border-right-0 rounded-0 form-control"
          placeholder="Enter a location..."
          type="text"
          value=""
        />
        <button
          class="btn btn-success rounded-0"
          type="button"
        >
          Search
        </button>
      </div>
    </form>
    <ul
      class="list-group wrapper"
    >
      <li
        class="list-group-item"
        role="presentation"
      >
        San Francisco
      </li>
      <li
        class="list-group-item"
        role="presentation"
      >
        San Diego
      </li>
      <li
        class="list-group-item"
        role="presentation"
      >
        San Jose
      </li>
      <li
        class="list-group-item"
        role="presentation"
      >
        San Antonio
      </li>
      <li
        class="list-group-item"
        role="presentation"
      >
        Santa Cruz
      </li>
      <li
        class="list-group-item"
        role="presentation"
      >
        Santiago
      </li>
      <li
        class="list-group-item"
        role="presentation"
      >
        Santorini
      </li>
      <li
        class="list-group-item"
        role="presentation"
      >
        Santander
      </li>
      <li
        class="list-group-item"
        role="presentation"
      >
        Busan
      </li>
      <li
        class="list-group-item"
        role="presentation"
      >
        Santa Cruz de Tenerife
      </li>
      <li
        class="list-group-item"
        role="presentation"
      >
        Santa Fe
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
